--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 node_modules
 dist
-.parcel-cache
+dist-ssr
+*.local
+.parcel-cache 
+
+# Editor directories and files
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
