--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "middle.messenger.praktikum.yandex",
   "version": "1.0.0",
   "description": "\"\"",
-  "main": "index.js",
   "scripts": {
+    "start": "parcel build index.html & node server.js",
     "dev": "parcel index.html",
     "build": "parcel build index.html",
     "lint": "eslint --ext .js, --ignore-path .gitignore --fix src",
@@ -21,15 +21,18 @@
   },
   "homepage": "https://github.com/zomkd/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
+    "@parcel/transformer-pug": "^2.7.0",
     "@parcel/transformer-sass": "^2.7.0",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
-    "husky": "^8.0.1",
+    "express": "^4.18.2",
+    "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
     "parcel": "^2.7.0",
     "prettier": "2.7.1",
+    "pug": "^3.0.2",
     "stylelint": "^14.14.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^29.0.0",
