--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"\"",
   "scripts": {
     "start": "parcel build index.html & node server.js",
-    "dev": "parcel index.html",
+    "dev": "parcel index.html --open --port 3000",
     "build": "parcel build index.html",
     "lint": "eslint --ext .js, --ignore-path .gitignore --fix src",
     "format": "prettier . --write",
@@ -21,21 +21,23 @@
   },
   "homepage": "https://github.com/zomkd/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@parcel/transformer-pug": "^2.7.0",
-    "@parcel/transformer-sass": "^2.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "eslint": "^8.26.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "express": "^4.18.2",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.0.3",
-    "parcel": "^2.7.0",
+    "@parcel/transformer-pug": "2.7.0",
+    "@parcel/transformer-sass": "2.7.0",
+    "@typescript-eslint/eslint-plugin": "5.42.0",
+    "@typescript-eslint/parser": "5.42.0",
+    "eslint": "8.26.0",
+    "eslint-config-airbnb": "19.0.4",
+    "husky": "8.0.2",
+    "lint-staged": "13.0.3",
+    "parcel": "2.7.0",
     "prettier": "2.7.1",
-    "pug": "^3.0.2",
-    "stylelint": "^14.14.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-config-standard-scss": "^6.1.0"
+    "pug": "3.0.2",
+    "stylelint": "14.14.1",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-standard": "29.0.0",
+    "stylelint-config-standard-scss": "6.1.0"
+  },
+  "dependencies": {
+    "express": "4.18.2"
   }
 }
