--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "stylelint": "14.14.1",
     "stylelint-config-prettier": "9.0.3",
     "stylelint-config-standard": "29.0.0",
-    "stylelint-config-standard-scss": "6.1.0"
+    "stylelint-config-standard-scss": "6.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "express": "4.18.2"
