--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
   },
   "extends": [
     "eslint:recommended",
-    "airbnb-base",
+    "airbnb-typescript",
     "plugin:@typescript-eslint/recommended"
   ],
   "overrides": [],
@@ -27,7 +27,10 @@
       "error",
       "ignorePackages",
       {
-        "ts": "never"
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
       }
     ],
     "no-unused-expressions": ["error", { "allowTernary": true }],
