--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@typescript-eslint/eslint-plugin": "5.42.0",
     "@typescript-eslint/parser": "5.42.0",
     "eslint": "8.26.0",
-    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "husky": "8.0.2",
     "lint-staged": "13.0.3",
     "parcel": "2.7.0",
