--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "devDependencies": {
     "@parcel/transformer-pug": "2.7.0",
     "@parcel/transformer-sass": "2.7.0",
-    "@types/pug": "^2.0.6",
-    "@types/uuid": "^8.3.4",
+    "@types/pug": "2.0.6",
+    "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.42.0",
     "@typescript-eslint/parser": "5.42.0",
     "eslint": "8.26.0",
