--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint fix": "eslint src/** --fix",
     "format": "prettier . --write",
     "stylelint": "stylelint **/*.scss",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "mocha --require ts-node/register './src/**/*.test.ts'"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,8 @@
   "devDependencies": {
     "@parcel/transformer-pug": "2.7.0",
     "@parcel/transformer-sass": "2.7.0",
+    "@types/chai": "4.3.4",
+    "@types/mocha": "10.0.1",
     "@types/pug": "2.0.6",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.42.0",
