SPRINT_4: add webpack docker tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,24 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "target": "ESNext",
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "useDefineForClassFields": true,
-    "strictNullChecks": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "strict": true,
-    "jsx": "preserve",
-    "sourceMap": true,
-    "resolveJsonModule": true,
-    "isolatedModules": false,
+    "target": "es2016",
+    "declaration": false,
+    "module": "commonjs",
     "esModuleInterop": true,
-    "lib": ["ESNext", "DOM"],
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "skipLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "sourceMap": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitAny": true,
+    "strictNullChecks": true
   },
-  "include": ["src/**/*.pug", "src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx"]
+  "lib": ["ESNext", "DOM"],
+  "exclude": ["dist", "node_modules"],
+  "include": ["./**/*.ts", "server.js", "server.js"],
+  "ts-node": {
+    "files": true
+    
+  }
 }
