--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "\"\"",
   "scripts": {
-    "start": "parcel build index.html & node server.ts",
-    "dev": "parcel index.html --open --port 3000",
-    "build": "parcel build index.html",
+    "start": "npm run build && node ./server.js",
+    "dev": "webpack serve",
+    "build": "webpack",
     "lint": "eslint src/**",
     "lint fix": "eslint src/** --fix",
     "format": "prettier . --write",
     "stylelint": "stylelint **/*.scss",
     "prepare": "husky install",
-    "test": "mocha --require ts-node/register './src/**/*.test.ts'"
+    "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.test.ts'"
   },
   "repository": {
     "type": "git",
@@ -24,30 +24,41 @@
   },
   "homepage": "https://github.com/zomkd/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@parcel/transformer-pug": "2.7.0",
-    "@parcel/transformer-sass": "2.7.0",
+    "@babel/core": "^7.20.12",
     "@types/chai": "4.3.4",
     "@types/mocha": "10.0.1",
+    "@types/proxyquire": "^1.3.28",
     "@types/pug": "2.0.6",
+    "@types/sinon": "^10.0.13",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.42.0",
-    "@typescript-eslint/parser": "5.42.0",
+    "@webdiscus/pug-loader": "^2.10.0",
     "chai": "4.3.7",
+    "css-loader": "^6.7.3",
     "eslint": "8.26.0",
     "eslint-config-airbnb-typescript": "17.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "8.0.2",
+    "jsdom": "^21.0.0",
     "lint-staged": "13.0.3",
     "mocha": "10.2.0",
-    "parcel": "2.7.0",
-    "parcel-transformer-pug-precompile": "1.0.6",
     "prettier": "2.7.1",
+    "proxyquire": "^2.1.3",
     "pug": "3.0.2",
+    "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^13.2.0",
+    "sinon": "^15.0.1",
+    "style-loader": "^3.3.1",
     "stylelint": "14.14.1",
     "stylelint-config-prettier": "9.0.3",
     "stylelint-config-standard": "29.0.0",
     "stylelint-config-standard-scss": "6.1.0",
+    "ts-loader": "^9.4.2",
     "ts-node": "10.9.1",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "express": "4.18.2",
