--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "es2021": true
   },
   "extends": [
+    "airbnb-base",
     "eslint:recommended",
     "airbnb-typescript",
     "plugin:@typescript-eslint/recommended"
@@ -12,7 +13,8 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": ["./tsconfig.json"]
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
@@ -23,6 +25,35 @@
     "import/no-unresolved": "off",
     "no-prototype-builtins": 0,
     "no-param-reassign": ["error", { "props": false }],
+    "react/jsx-filename-extension": [0],
+    "@typescript-eslint/no-useless-constructor": [0],
+    "class-methods-use-this": [0],
+    "operator-linebreak": [0],
+    "import/no-named-as-default": [0],
+    "array-callback-return": [0],
+    "@typescript-eslint/no-explicit-any": [0],
+    "no-underscore-dangle": [0],
+    "implicit-arrow-linebreak": [0],
+    "prefer-promise-reject-errors": [0],
+    "consistent-return": [0],
+    "import/no-cycle": [0],
+    "@typescript-eslint/no-unused-vars": [0],
+    "@typescript-eslint/no-shadow": [0],
+    "default-case": [0],
+    "@typescript-eslint/no-non-null-assertion": [0],
+    "@typescript-eslint/no-this-alias": [0],
+    "no-return-assign": [0],
+    "@typescript-eslint/indent": [0],
+    "no-new": [0],
+    "@typescript-eslint/ban-ts-comment": [0],
+    "@typescript-eslint/no-unused-expressions": [0],
+    "no-continue": [0],
+    "@typescript-eslint/ban-types": [0],
+    "no-constructor-return": [0],
+    "no-param-reassign": [0],
+    "@typescript-eslint/no-throw-literal": [0],
+    "no-restricted-syntax": [0],
+    "function-paren-newline": [0],
     "import/extensions": [
       "error",
       "ignorePackages",
@@ -34,7 +65,7 @@
       }
     ],
     "no-unused-expressions": ["error", { "allowTernary": true }],
-    "max-len": ["error", { "code": 120 }]
+    "max-len": ["error", { "code": 140 }]
   },
   "settings": {
     "import/parsers": {
